#16 hotfix to fix video player dimensions on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -140,8 +140,8 @@ a {
 	}
 
 	.player-container {
-		height: 100%;
-		/*width: 80%;*/
+		height: 100% !important;
+		width: 80% !important;
 	}
 
 	.wrapper:after {
